--- a/HelloApp/pom.xml
+++ b/HelloApp/pom.xml
@@ -49,7 +49,6 @@
 			<artifactId>taglibs-standard-compat</artifactId>
 			<version>1.2.5</version>
 		</dependency>
-		
 		<!--tiles관련-->
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
@@ -65,6 +64,12 @@
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-jsp</artifactId>
 			<version>3.0.8</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
 		</dependency>
 	</dependencies>
 	<build>
